connected project to font awesome

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Palladium Spa & Resort</title>
   </head>
   <body>
@@ -20,6 +26,7 @@
         <li class="nav-list-item"><a class="anchor" href="">Galeria</a></li>
         <li class="nav-list-item"><a class="anchor" href="">Contato</a></li>
       </ul>
+      <i class="fa-solid fa-bars menu-btn"></i>
     </nav>
     <header class="header-page">
       <h1 class="header-title">Palladium Spa & Resort</h1>
@@ -27,7 +34,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repellat laboriosam quo soluta earum ipsum
         animi numquam veniam! Ab sed nulla voluptatum fugiat omnis odit eius. Eaque quaerat officia hic!
       </p>
-      <a class="header-anchor" href="">Mais informações</a>
+      <a class="header-anchor" href="">Mais informações<i class="fa-regular fa-paper-plane"></i></a>
     </header>
   </body>
 </html>
