hero section finished

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="nav-menu">
             <li><a href="#home" class="menu-item">Home</a></li>
             <li><a href="#explore" class="menu-item">Paraíso</a></li>
-            <li><a href="" class="menu-item">Conheça</a></li>
+            <li><a href="#hero" class="menu-item">Conheça</a></li>
             <li><a href="" class="menu-item">Galeria</a></li>
             <li><a href="" class="menu-item">Contato</a></li>
         </ul>
@@ -60,6 +60,15 @@
     </section>
     <!--------------------------- fim explore --------------------------->
 
+    <!--------------------------- hero --------------------------->
+<section class="hero" id="hero">
+    <div class="hero-content">
+        <h2>Sinta-se em casa</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolor, doloremque asperiores quibusdam eaque nulla earum quidem! Aut, nisi ipsum?</p>
+        <a href="#" class="btn">Conhça o Palladium</a>
+    </div>
+</section>
+    <!--------------------------- fim hero --------------------------->
 
 
 
