--- a/index.html
+++ b/index.html
@@ -1,80 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Palladium Resort & Spa</title>
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
 
     <!-- chamada Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet" />
 
-    <!-- linkar o css -->   
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+    <!-- linkar o css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<body id="home">
-
+  <body id="home">
     <!-- menu -->
     <nav class="nav-bar">
-        <a href="" class="logo"><span class="logo-square">Pa</span>lladium</a>       
-        <ul class="nav-menu">
-            <li><a href="#home" class="menu-item">Home</a></li>
-            <li><a href="#explore" class="menu-item">Paraíso</a></li>
-            <li><a href="#hero" class="menu-item">Conheça</a></li>
-            <li><a href="" class="menu-item">Galeria</a></li>
-            <li><a href="" class="menu-item">Contato</a></li>
-        </ul>
-        <i class="fa-solid fa-bars menu-btn"></i>
+      <a href="" class="logo"><span class="logo-square">Pa</span>lladium</a>
+      <ul class="nav-menu">
+        <li><a href="#home" class="menu-item">Home</a></li>
+        <li><a href="#explore" class="menu-item">Paraíso</a></li>
+        <li><a href="#hero" class="menu-item">Conheça</a></li>
+        <li><a href="#gallery" class="menu-item">Galeria</a></li>
+        <li><a href="" class="menu-item">Contato</a></li>
+      </ul>
+      <i class="fa-solid fa-bars menu-btn"></i>
     </nav>
 
     <!--------------------------- header --------------------------->
     <header class="header-page">
-        <h1>Palladium Resort & Spa</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quidem et quae eum nam aliquid modi. Voluptatum recusandae consectetur unde.</p>
-        <a href="" class="btn">Mais informações<i class="fa-regular fa-paper-plane"></i></a>
+      <h1>Palladium Resort & Spa</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quidem et quae eum nam aliquid modi. Voluptatum
+        recusandae consectetur unde.
+      </p>
+      <a href="" class="btn">Mais informações<i class="fa-regular fa-paper-plane"></i></a>
     </header>
     <!--------------------------- fim header --------------------------->
 
     <!--------------------------- explore ------------------------------->
     <section class="box" id="explore">
-        <h2 class="box-title">Uma parte do paraíso</h2>
-        <div class="box-list">
-            <div class="box-list-item box-list-img1">
-                <a href="" class="btn">Clique e conheça</a>
-            </div>
-            <div class="box-list-item box-list-img2">
-                <a href="" class="btn">Clique e conheça</a>
-            </div>
-            <div class="box-list-item box-list-img3">
-                <a href="" class="btn">Clique e conheça</a>
-            </div>
+      <h2 class="box-title">Uma parte do paraíso</h2>
+      <div class="box-list">
+        <div class="box-list-item box-list-img1">
+          <a href="" class="btn">Clique e conheça</a>
         </div>
+        <div class="box-list-item box-list-img2">
+          <a href="" class="btn">Clique e conheça</a>
+        </div>
+        <div class="box-list-item box-list-img3">
+          <a href="" class="btn">Clique e conheça</a>
+        </div>
+      </div>
     </section>
     <!--------------------------- fim explore --------------------------->
 
     <!--------------------------- hero --------------------------->
-<section class="hero" id="hero">
-    <div class="hero-content">
+    <section class="hero" id="hero">
+      <div class="hero-content">
         <h2>Sinta-se em casa</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolor, doloremque asperiores quibusdam eaque nulla earum quidem! Aut, nisi ipsum?</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolor, doloremque asperiores quibusdam eaque
+          nulla earum quidem! Aut, nisi ipsum?
+        </p>
         <a href="#" class="btn">Conhça o Palladium</a>
-    </div>
-</section>
+      </div>
+    </section>
     <!--------------------------- fim hero --------------------------->
 
+    <!--------------------------- Galeria --------------------------->
+    <article class="box" id="gallery">
+      <h2 class="box-title">Galeria</h2>
 
+      <section class="gallery">
+        <div class="gallery-item">
+          <img src="./assets/images/galeria1.jpg" alt="imagem 1" />
+          <h3>Lorem ipsum</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus repellendus harum earum, eius neque?</p>
+        <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria2.jpg" alt="imagem 2">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi esse reiciendis labore sunt officia in?</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria3.jpg" alt="imagem 3">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed adipisci eveniet laborum, esse repellat voluptatum.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria4.jpg" alt="imagem 4">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria5.jpg" alt="imagem 5">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria6.jpg" alt="imagem 6">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria7.jpg" alt="imagem 7">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria8.jpg" alt="imagem 8">
+           <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+        <div class="gallery-item">
+            <img src="./assets/images/galeria9.jpg" alt="imagem 9">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus adipisci eaque, voluptatibus laudantium itaque eveniet.</p>
+            <a href="" class="btn">Mais informações</a>
+        </div>
+      </section>
+    </article>
+    <!--------------------------- fim Galeria --------------------------->
 
     <script src="./assets/js/menu.js"></script>
     <script src="./assets/js/scroll.js"></script>
-
-</body>
-
+  </body>
 </html>
